--- a/pm2web.html
+++ b/pm2web.html
@@ -47,17 +47,8 @@ function readableBytes(bytes) {
 
 $.getJSON( "http://localhost:9615", function( data ) {
   var items = [];
-  console.log(data);
-  console.log(data["monit"]["interfaces"]);
-  console.log(data["processes"]);
-
-
-  console.log(typeof(data.processes[0].pm2_env.env))
-  $.each( data["monit"], function( key, val ) {
-    items.push( "<li id='" + key + "'>" + val + "</li>" );
-  });
-
- 
+  
+  document.getElementById("result").innerHTML = tmpl("tmpl-demo", data);
 });
 
 </script>
